@@ -1,3 +1,9 @@
+Mon Mar 30 21:29:43 1998  Owen Taylor  <owt1@cornell.edu>
+
+	* gtk/gtkentry.c: Add a "style_set" callback, so the
+	font can be changed at run time. (needed for GIMP text
+	tool)
+
 Tue Mar 31 01:17:23 1998  Tim Janik  <timj@gtk.org>
 
 	* gtk/gtknotebook.c (gtk_notebook_menu_item_create): show the menu_label
@@ -55,7 +61,6 @@ Sun Mar 29 22:29:00 1998  Tim Janik  <timj@gtk.org>
 	Added wrapping capabilities to GtkSpinButton. New function :
 	gtk_spin_button_set_wrap (Lars Hamann and Stefan Jeske).
 
->>>>>>> 1.302
 Sat Mar 28 21:18:42 1998  Owen Taylor  <owt1@cornell.edu>
 
 	* gtk/gtkcombo.c (gtk_combo_disable_activate): 
